main.css
@import "/fonts/inter.css";

:root {
    --ui-font: Inter, Helvetica, Roboto, sans-serif
}

body,
html {
    fill: #333;
    background-color: #fff;
    box-sizing: border-box;
    color: #333;
    font-family: Inter, Helvetica, Roboto, sans-serif;
    font-family: var(--ui-font);
    font-weight: 400;
    margin: 0;
    min-height: 100vh;
    overflow-x: hidden
}

*,
:after,
:before {
    box-sizing: inherit
}

::-moz-selection {
    background-color: rgba(140, 213, 255, .3);
    color: #002e99;
    text-shadow: none
}

::selection {
    background-color: rgba(140, 213, 255, .3);
    color: #002e99;
    text-shadow: none
}

a {
    fill: #08c;
    color: #08c;
    -webkit-text-decoration: none;
    text-decoration: none
}

a:focus {
    outline: none;
    -webkit-text-decoration: underline;
    text-decoration: underline
}

h1 {
    font-size: 32px;
    font-weight: 700;
    margin-bottom: 16px;
    margin-top: 0
}

h1 svg {
    height: 45px;
    max-width: 100%;
    position: relative;
    top: 11px;
    width: 310px
}

h1 .logotype-svg {
    fill: inherit
}

@media(min-width:966px) {
    h1 {
        font-size: 34px
    }
}

h1+p {
    font-size: 1.25em;
    line-height: 1.33
}

h2 {
    font-size: 25px;
    font-weight: 300;
    margin: 0 0 16px;
    padding: 0
}

h3 {
    font-size: 1.5em;
    font-weight: 600;
    opacity: .8
}

h4 {
    font-size: 1.25em;
    font-weight: 400;
    margin-bottom: 16px;
    margin-top: 16px
}

h5 {
    font-size: 1em;
    font-weight: 600;
    margin-bottom: 3px;
    margin-top: 0
}

h5,
p {
    text-align: left
}

p {
    line-height: 1.65
}

p.small-label {
    font-size: 12px;
    margin: 0;
    opacity: .8;
    padding: 0;
    text-align: center
}

q {
    font-family: Marck Script, cursive;
    font-size: 24px;
    font-weight: 400;
    margin-bottom: 10px
}

q:after,
q:before {
    content: none
}

@media(min-width:414px) {
    q {
        font-size: 36px
    }
}

hr {
    background: #c9c9c9;
    border: none;
    height: 1px
}

img {
    height: auto;
    max-width: 100%
}

img.h1 {
    display: block;
    height: 27px;
    margin: 19px auto;
    opacity: .8
}

div.inline,
img.inline {
    display: inline-block !important;
    vertical-align: middle
}

img.inline+div.inline {
    margin-left: 12px
}

.inline-tweet {
    color: inherit
}

.inline-tweet:focus,
.inline-tweet:hover {
    color: #08c;
    -webkit-text-decoration: none;
    text-decoration: none
}

.inline-tweet:after {
    color: inherit;
    content: "\f099";
    font-family: "font awesome\ 5 brands";
    font-style: normal;
    font-weight: inherit;
    margin-top: .2em;
    opacity: 0;
    padding-left: 6px;
    position: absolute;
    transition: all .15s ease-in-out
}

.inline-tweet:focus:after,
.inline-tweet:hover:after {
    opacity: 1
}

.read-more {
    white-space: nowrap
}

.read-more:after {
    color: inherit;
    content: "\2192";
    display: inline-block;
    font-style: normal;
    font-weight: inherit;
    padding-left: 3px;
    transition: transform .15s ease-in-out
}

.read-more:hover:after {
    transform: translateX(3px)
}

.text-left {
    text-align: left
}

.text-center {
    text-align: center
}

.text-right {
    text-align: right
}

nav {
    line-height: 48px;
    min-height: 48px;
    min-width: 100%;
    overflow-x: auto;
    white-space: nowrap
}

@media(max-width:768px) {
    nav {
        font-size: 14px
    }
}

.nav-content {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: space-between
}

html.ie-legacy .nav-content {
    min-width: 430px
}

html.ie-legacy .nav-content>ul.right {
    float: right
}

nav .menu-button {
    align-items: center;
    border: none;
    display: none;
    flex: none;
    height: 24px;
    justify-content: center;
    margin: 12px 24px;
    padding: 0;
    width: 24px
}

nav .menu-button.enabled {
    display: inline-block
}

nav .menu-button.enabled+.nav-content {
    display: none
}

nav .menu-button.enabled[aria-expanded=true]+.nav-content {
    display: flex
}

nav .menu-button,
nav .menu-button:active,
nav .menu-button:focus,
nav .menu-button:hover {
    background: 0 0;
    border: none;
    box-shadow: none
}

nav ul {
    display: inline-block;
    list-style: none;
    margin: 0;
    padding: 0 12px
}

nav ul:first-of-type {
    display: flex;
    flex: 0 0 auto;
    flex-direction: column
}

nav a,
nav a:visited,
nav li {
    display: inline-block
}

nav a,
nav a:visited {
    fill: inherit;
    color: inherit;
    margin: 0;
    padding: 0 12px
}

.menu-button:focus svg,
nav a:focus {
    fill: #08c;
    color: #08c;
    -webkit-text-decoration: none;
    text-decoration: none
}

nav .menu-button:hover svg,
nav a:hover,
nav a:visited:hover {
    opacity: .7
}

nav a[title=Facebook]:focus,
nav a[title=Facebook]:hover {
    fill: #19227e;
    color: #19227e
}

nav a[title="Google+"]:focus,
nav a[title="Google+"]:hover,
nav a[title=Youtube]:focus,
nav a[title=Youtube]:hover {
    fill: #d50000;
    color: #d50000
}

nav a[title=Mastodon]:focus,
nav a[title=Mastodon]:hover {
    fill: #0d93ff;
    color: #0d93ff
}

nav a[title=Medium]:focus,
nav a[title=Medium]:hover {
    fill: #00ab6b;
    color: #00ab6b
}

nav a[title=Reddit]:focus,
nav a[title=Reddit]:hover {
    fill: #ff4500;
    color: #ff4500
}

nav a[title=StackExchange]:focus,
nav a[title=StackExchange]:hover {
    fill: #0d93ff;
    color: #0d93ff
}

nav a[title=Twitter]:focus,
nav a[title=Twitter]:hover {
    fill: #1da1f2;
    color: #1da1f2
}

nav .logomark {
    height: 48px;
    line-height: 14px;
    padding: 12px;
    vertical-align: middle
}

nav .logomark .logomark-svg,
nav .logomark:focus .logomark-svg {
    fill: inherit
}
/* ... */

